--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header container">
       <nav class="nav">
         <a class="logo" href="./index.html"
           >Web<span class="span">Studio</span></a
         >
-        <ul>
+        <ul class="header-list">
           <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="adrdess-list">
           <li>
             <a class="address-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -48,165 +48,195 @@
     <main>
       <!-- Main info -->
       <section class="main-info">
-        <h1 class="main-titel">Effective Solutions for Your Business</h1>
-        <button class="button-main" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-titel">Effective Solutions for Your Business</h1>
+          <button class="button-main" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Jur advantages  -->
       <section>
-        <h2>Jur advantages</h2>
-        <ul>
-          <li>
-            <h3 class="title-three">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-three">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Jur advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-iteam">
+              <h3 class="title-three">Strategy</h3>
+              <p class="advantages-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-iteam">
+              <h3 class="title-three">Punctuality</h3>
+              <p class="advantages-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-iteam">
+              <h3 class="title-three">Diligence</h3>
+              <p class="advantages-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-iteam">
+              <h3 class="title-three">Technologies</h3>
+              <p class="advantages-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our team -->
       <section class="our-team">
-        <h2 class="two-title">Our Team</h2>
-        <ul>
-          <li class="team-item">
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/TomFord.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/CamilaGarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/DanielWilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="title-three">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="two-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/MarkGuerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="title-three">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/TomFord.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="title-three">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/CamilaGarcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="title-three">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/DanielWilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="title-three">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our Portfolio -->
       <section>
-        <h2 class="two-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/banking_app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless_payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi_service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen_illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online_courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="title-three">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="two-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/banking_app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/cashless_payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/taxi_service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/screen_illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/online_courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="sub-container-portfolio">
+                <h3 class="title-three">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="span">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="span">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
