--- a/index.html
+++ b/index.html
@@ -18,31 +18,33 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="header container">
-      <nav class="nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="span">Studio</span></a
-        >
-        <ul class="header-list">
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="adrdess-list">
-          <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container container-header">
+        <nav class="nav-header">
+          <a class="logo" href="./index.html"
+            >Web<span class="span">Studio</span></a
+          >
+          <ul class="header-list">
+            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link" href="">Portfolio</a></li>
+            <li><a class="nav-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="adrdess-list">
+            <li>
+              <a class="address-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main -->
     <main>
@@ -54,9 +56,9 @@
         </div>
       </section>
       <!-- Jur advantages  -->
-      <section>
+      <section class="jur-advantages">
         <div class="container">
-          <h2 hidden>Jur advantages</h2>
+          <h2 class="advantages-title">Jur advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-iteam">
               <h3 class="title-three">Strategy</h3>
@@ -146,7 +148,7 @@
         </div>
       </section>
       <!-- Our Portfolio -->
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="two-title">Our Portfolio</h2>
           <ul class="portfolio-list">
