--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Jur advantages  -->
       <section class="jur-advantages">
         <div class="container">
-          <h2 class=".visually-hidden">Jur advantages</h2>
+          <h2 class="visually-hidden">Jur advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-iteam">
               <h3 class="title-three">Strategy</h3>
